# WeMediaSpider

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scheduled_spider.py  spider_cli.py
.github/: copilot-instructions.md
spider/: __init__.py  database.py  login.py  main.py  scraper.py  utils.py
spider/db/: __init__.py  factory.py  interface.py  models.py  mysql.py  sqlite.py
spider/log/: __init__.py  utils.py
spider/wechat/: __init__.py  login.py  run.py  scraper.py  utils.py
src/: example.py  utils.py
